--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,5 @@ repository_name: 'elixir-italy.galaxy.refdata'
 stratum_zero: '{{ ansible_default_ipv4.address }}'
 
 repository_url: 'http://{{ stratum_zero }}/cvmfs/{{ repository_name }}'
+
+cvmfs_s3_enabled: False
