--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,15 +3,14 @@ galaxy_info:
   description: Ansible role to setup a CernVM-FS stratum zero repository
   company: IBIOM-CNR, ELIXIR-IIB
   license: Apache
-  min_ansible_version: 2.0
   min_ansible_version: 2.1.2.0
   platforms:
   - name: Ubuntu
     versions:
     - xenial
-  #- name: EL
-  #  versions:
-  #  - 7
+  - name: EL
+    versions:
+    - 7
   galaxy_tags:
     - cvmfs
     - filesystem
